[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revit-mcp-bridge"
version = "0.1.0"
description = "CLI bridge to connect to remote Revit MCP server over HTTP+SSE"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
]

[project.scripts]
revit-mcp = "revit_mcp_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
