[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-bridge"
version = "0.1.0"
description = "CLI bridge to connect OpenClaw to Revit Copilot over MCP"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
]

[project.scripts]
revit-mcp = "openclaw_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
